<resources>
    <string name="app_name">Expenses</string>
    <string name="web_page_link" translatable="false">https://www.guillenh.com</string>
    <string name="privacity_link" translatable="false">https://guillehern3030.github.io/privacypolitics/app/expenses.html</string>
    <string name="server_client_id" translatable="false">473981005256-r0fid2hkroted78aimm3vtbphjf5ru3n.apps.googleusercontent.com</string>
    <string name="right" translatable="false"><![CDATA[>]]></string>
    <string name="left" translatable="false"><![CDATA[<]]></string>
    <string name="divide" translatable="false">/</string>
    <string name="expenses">Expenses</string>
    <string name="incomes">Incomes</string>
    <string name="debts">Debts</string>
    <string name="reserves">Reservations</string>
    <string name="loading">Loading</string>
    <string name="calculating">Calculating…</string>
    <string name="commingson">Coming soon…</string>
    <string name="home">Home</string>
    <string name="summary">Summary</string>
    <string name="shoppinglist">Shopping list</string>
    <string name="budget">Budget</string>
    <string name="action">Add</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="add_expense">Expense</string>
    <string name="add_income">Income</string>
    <string name="add_debt">Debt</string>
    <string name="add_reserve">Reserve</string>
    <string name="confirm">Confirm</string>
    <string name="spinner_categories">Select your transaction`s category</string>
    <string name="spinner_coins">Select your transaction`s coin</string>
    <string name="input_description">Write your transaction`s description</string>
    <string name="description">Description</string>
    <string name="create_category">Create a new category</string>
    <string name="error_invalid_amount">The number entered must be greater than zero</string>
    <string name="want_delete_transaction">Do you want to delete this transaction?</string>
    <string name="transactions_amount">Transactions amount</string>
    <string name="transaction_amount">Transaction amount</string>
    <string name="transaction_image">Image attached</string>
    <string name="transaction_image_not_exists">The image has been removed</string>
    <string name="transaction_created_success">Transaction created</string>
    <string name="transaction_created_success_no_image">Transaction created without image</string>
    <string name="transaction_created_failed">Transaction creation failed</string>
    <string name="transaction_edited_success">Transaction edited</string>
    <string name="transaction_edited_success_no_image">Transaction edited without image</string>
    <string name="transaction_edited_failed">Transaction edition failed</string>
    <string name="transaction_delete_success">Transaction deleted</string>
    <string name="transaction_photo">Photo</string>
    <string name="transaction_take_photo">Take photo</string>
    <string name="transaction_select_photo">Select photo</string>
    <string name="total_month">Total of month</string>
    <string name="total_day">Total of day</string>
    <string name="total">Total</string>
    <string name="today">Today</string>
    <string name="balance">Balance</string>
    <string name="transactions">Transactions</string>
    <string name="transactions_today">Today transactions</string>
    <string name="transactions_empty">No transactions today</string>
    <string name="debts_empty">No debts</string>
    <string name="reserves_empty">No reserves</string>
    <string name="balance_empty">No balance available</string>
    <string name="summary_empty">No transactions registered yet</string>
    <string name="date_empty">No transactions registered in this day. You can add expenses or incomes by pressing the + button</string>
    <string name="summary_date_empty">No transactions registered yet. You can add expenses or incomes by pressing the + button</string>
    <string name="transactions_summary_empty">No transactions registered yet.</string>
    <string name="transactions_period">Details</string>
    <string name="transactions_description_incomes">Total of incomes:</string>
    <string name="transactions_description_expenses">Total of expenses:</string>
    <string name="transactions_description_balance">Balance total:</string>
    <string name="transactions_calendar_init">Initial day</string>
    <string name="transactions_calendar_ends">Final day</string>
    <string name="transactions_calendar_require_new_date">Please choose the closing date</string>
    <string name="config">Configuration</string>
    <string name="config_currency_title">Coin currency</string>
    <string name="config_currency_configuration">Currency configuration</string>
    <string name="config_currency_description">Select your coin currency</string>
    <string name="config_currency_add">Add new coin</string>
    <string name="config_decimal_title">Currency format</string>
    <string name="config_decimal_description">Define your currency decimal format</string>
    <string name="config_category_transactions_title">Transactions configuration</string>
    <string name="config_categories">Categories</string>
    <string name="config_category_incomes">Incomes categories</string>
    <string name="config_category_incomes_description">Add or edit incomes categories</string>
    <string name="config_category_expenses">Expenses categories</string>
    <string name="config_category_expenses_description">Add or edit expenses categories</string>
    <string name="config_security_title">Security</string>
    <string name="config_security_password">Password</string>
    <string name="config_security_password_description">Config or remove a password</string>
    <string name="config_security_privacity">Privacity</string>
    <string name="config_security_privacity_description">Read our privacity politics</string>
    <string name="config_information_title">Information</string>
    <string name="config_information_rate">Rate</string>
    <string name="config_information_rate_description">Put us a nice review</string>
    <string name="config_information_credits">Credits</string>
    <string name="config_information_credits_description">Creator information</string>
    <string name="config_information_widemode">Wide mode</string>
    <string name="config_information_widemode_description">If some buttons are covered, activate me</string>
    <string name="config_information_donate">Donate</string>
    <string name="config_information_donate_description">Help us with a donation</string>
    <string name="config_delete_title">Restoration</string>
    <string name="config_delete_restore">Remove all data</string>
    <string name="config_delete_restore_description">Deletes all data and restart the application</string>
    <string name="config_invoice_title">Invoice configuration</string>
    <string name="config_invoice_logotype">Logotype</string>
    <string name="config_invoice_logotype_description">Create your logotype</string>
    <string name="config_invoice_details">Details</string>
    <string name="config_invoice_details_description">Define invoice details</string>
    <string name="config_invoice_signature">Signature</string>
    <string name="config_invoice_signature_description">Define your signature</string>
    <string name="config_invoice_taxes">Taxes</string>
    <string name="config_invoice_taxes_description">Set up taxes</string>
    <string name="config_invoice_payment">Payments</string>
    <string name="config_invoice_payment_description">Payment methods</string>
    <string name="unsync">Desynchronize</string>
    <string name="sync_code_required">The sync code is required</string>
    <string name="sync">Synchronize</string>
    <string name="sync_code">Code</string>
    <string name="sync_signed">My account</string>
    <string name="sync_user">User</string>
    <string name="sync_sign_in">Sign in</string>
    <string name="sync_sign_out">Sign out</string>
    <string name="sync_premium">Premium</string>
    <string name="sync_premium_description">With a premium account, you can synchronize your budgets with another people</string>
    <string name="sync_synchronize">Synchronize with other</string>
    <string name="privacy_politics_title">Privacity politics</string>
    <string name="privacity_politics_1_title">1. Introduction</string>
    <string name="privacity_politics_1_content">This Privacy Policy describes how Expenses App ("we", "our", or "the App") collects, uses, and protects the information that users ("you", "your", or "user") provide when using our mobile application. We are committed to protecting your privacy and ensuring that your personal information is handled in a safe and responsible manner.</string>
    <string name="privacity_politics_2_title">2. Information Collection</string>
    <string name="privacity_politics_2_subtitle">Our app collects and stores the following information:</string>
    <string name="privacity_politics_2_content_1">Transactions: Data of incomes and expenses that you enter, including categories, amounts, and dates.</string>
    <string name="privacity_politics_2_content_2">Budgets: Information about the monthly budgets you create.</string>
    <string name="privacity_politics_2_content_3">Shopping Lists: Items and details of the shopping lists you prepare.</string>
    <string name="privacity_politics_2_content_4">All the information collected by the App is stored locally on your device. We do not collect, store, or share your information with third parties over the internet.</string>
    <string name="privacity_politics_3_title">3. Use of Information</string>
    <string name="privacity_politics_3_subtitle">The information collected is used to:</string>
    <string name="privacity_politics_3_content_1">Provide a summary of your transactions divided by categories.</string>
    <string name="privacity_politics_3_content_2">Display a complete list of all your transactions sorted by date.</string>
    <string name="privacity_politics_3_content_3">Allow the creation and tracking of monthly budgets.</string>
    <string name="privacity_politics_3_content_4">Manage and maintain shopping lists.</string>
    <string name="privacity_politics_4_title">4. Information Security</string>
    <string name="privacity_politics_4_content">We take the security of your information very seriously. The app stores all data securely on your device. While we implement security measures to protect your information, it is also important that you protect your device from unauthorized access.</string>
    <string name="privacity_politics_5_title">5. Your Rights</string>
    <string name="privacity_politics_5_subtitle">You have the right to:</string>
    <string name="privacity_politics_5_content_1">Access your data stored in the app.</string>
    <string name="privacity_politics_5_content_2">Modify or delete any information entered in the app.</string>
    <string name="privacity_politics_5_content_3">Uninstall the app, which will delete all data stored on your device.</string>
    <string name="privacity_politics_6_title">6. Changes to the Privacy Policy</string>
    <string name="privacity_politics_6_content_1">We may update this Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy Policy on this page. It is recommended that you review this Policy periodically to stay informed of any modifications.</string>
    <string name="privacity_politics_6_content_2">Use of this application constitutes acceptance of our terms and privacy policies.</string>
    <string name="privacity_politics_7_title">7. Contact</string>
    <string name="privacity_politics_7_content">If you have any questions or concerns about this Privacy Policy, please contact us through our authorized means.</string>
</resources>