<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_white"
        android:title="@string/home" />
    <item
        android:id="@+id/navigation_summary"
        android:icon="@drawable/summary_white"
        android:title="@string/summary" />
    <item
        android:id="@+id/navigation_action"
        android:icon="@drawable/plus"
        android:title="@string/action" />
    <item
        android:id="@+id/navigation_budget"
        android:icon="@drawable/budget_white"
        android:title="@string/budget" />
    <item
        android:id="@+id/navigation_shoppinglist"
        android:icon="@drawable/shoppinglist_white"
        android:title="@string/shoppinglist" />
</menu>